--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "test": "cypress run",
     "unit-test": "jest --verbose",
     "ci": "start-server-and-test test-server http://localhost:3000/login test",
-    "deploy": "sls deploy --aws-profile education-evidence --stage production",
+    "deploy": "npm prune --production && sls deploy --force --aws-profile education-evidence-prod --stage production && npm i",
     "lint": "eslint --fix --ext js ./*.js && echo 'Lint complete.'"
   },
   "repository": {
@@ -27,29 +27,29 @@
   },
   "homepage": "https://github.com/LBHackney-IT/education-evidence-upload-tool#readme",
   "devDependencies": {
-    "aws-sdk": "^2.650.0",
-    "cypress": "^4.3.0",
-    "cypress-file-upload": "^4.0.4",
+    "aws-sdk": "^2.738.0",
+    "cypress": "^4.12.1",
+    "cypress-file-upload": "^4.0.7",
     "eslint": "^6.6.0",
-    "eslint-config-prettier": "^6.5.0",
-    "eslint-plugin-jest": "^23.8.2",
-    "eslint-plugin-prettier": "^3.1.1",
-    "jest": "^25.4.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-jest": "^23.20.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "jest": "^25.5.4",
     "prettier": "^1.18.2",
-    "serverless": "^1.67.0",
+    "s3rver": "^3.6.1",
+    "start-server-and-test": "^1.11.3"
+  },
+  "dependencies": {
+    "cookie": "^0.4.1",
+    "handlebars": "^4.7.6",
+    "jsonwebtoken": "^8.5.1",
+    "lambda-api": "^0.10.6",
+    "moment-timezone": "^0.5.31",
+    "nanoid": "^3.1.12",
+    "serverless": "1.67.0",
     "serverless-dynamodb-local": "^0.2.39",
     "serverless-offline": "^5.12.1",
     "serverless-offline-ssm": "^4.1.2",
-    "serverless-s3-local": "^0.5.4",
-    "start-server-and-test": "^1.10.11"
-  },
-  "dependencies": {
-    "@sentry/node": "^5.15.2",
-    "cookie": "^0.4.0",
-    "handlebars": "^4.7.6",
-    "jsonwebtoken": "^8.5.1",
-    "lambda-api": "^0.10.5",
-    "moment-timezone": "^0.5.28",
-    "nanoid": "^3.1.3"
+    "serverless-s3-local": "^0.5.4"
   }
 }
