--- a/serverless.yml
+++ b/serverless.yml
@@ -80,15 +80,23 @@ package:
     - ./**
 
 functions:
-  root:
-    handler: root.handler
+  app:
+    handler: lambda.appHandler
     package:
       include:
-        - root.js
+        - lambda.js
+        - lib/**
+        - static/**
+        - templates/**
+        - node_modules/**
     events:
+      - http: GET /
       - http:
-          path: /
+          path: /assets/{proxy+}
           method: GET
+      - http:
+          path: /{proxy+}
+          method: ANY
   saveDropbox:
     handler: lambda.saveDropboxHandler
     package:
@@ -102,19 +110,6 @@ functions:
       - http:
           path: '/dropboxes/{dropboxId}'
           method: POST
-  app:
-    handler: lambda.handler
-    package:
-      include:
-        - lambda.js
-        - lib/**
-        - static/**
-        - templates/**
-        - node_modules/**
-    events:
-      - http:
-          path: '{proxy+}'
-          method: ANY
 
 resources:
   Resources:
