Expire s3 objects after 5 years

--- a/serverless.yml
+++ b/serverless.yml
@@ -126,6 +126,11 @@ resources:
           ServerSideEncryptionConfiguration:
             - ServerSideEncryptionByDefault:
                 SSEAlgorithm: AES256
+        LifecycleConfiguration:
+          Rules:
+            - Id: DeleteContentAfter5Years
+              Status: 'Enabled'
+              ExpirationInDays: 1825
     UploadsDynamoDbTable:
       Type: 'AWS::DynamoDB::Table'
       DeletionPolicy: Retain
