--- a/serverless.yml
+++ b/serverless.yml
@@ -30,6 +30,7 @@ provider:
     HACKNEY_TOKEN_SECRET: ${ssm:/common/hackney-jwt-secret}
     CUSTOMER_TOKEN_SECRET: ${ssm:/common/customer-jwt-secret~true}
     stage: ${self:provider.stage}
+    ALLOWED_GROUPS: ${self:custom.allowedGroups.${self:provider.stage}}
 
 custom:
   dynamodb:
@@ -67,6 +68,11 @@ custom:
     test: arn:aws:acm:x
     staging: arn:aws:acm:us-east-1:715003523189:certificate/8f7fa30c-a4e5-4775-b827-ade824a33c9a
     production: arn:aws:acm:us-east-1:153306643385:certificate/71728a39-cd3e-4570-a440-e87f84ef9a0d
+  allowedGroups:
+    dev: any-old-group
+    test: test-group
+    staging: education-evidence-staging,development-team-staging
+    production: education-evidence-production,development-team-production
 
 plugins:
   - serverless-offline
