--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "lambda-api": "^0.10.6",
     "moment-timezone": "^0.5.31",
     "nanoid": "^3.1.12",
+    "notifications-node-client": "^4.8.0",
+    "request": "^2.88.2",
     "serverless": "1.67.0",
     "serverless-dynamodb-local": "^0.2.39",
     "serverless-offline": "^5.12.1",
