--- a/.env.sample
+++ b/.env.sample
@@ -1,2 +1,5 @@
 /common/hackney-jwt-secret=
 /common/customer-jwt-secret=
+/education-evidence/gov-notify-api-key=
+/education-evidence/gov-notify-confirmation-template-id=
+/education-evidence/feedback-form-url=
