Send email when evidence is rejected

--- a/serverless.yml
+++ b/serverless.yml
@@ -33,6 +33,7 @@ provider:
     ALLOWED_GROUPS: ${self:custom.allowedGroups.${self:provider.stage}}
     GOV_NOTIFY_API_KEY: ${ssm:/education-evidence/gov-notify-api-key}
     GOV_NOTIFY_CONFIRMATION_TEMPLATE_ID: ${ssm:/education-evidence/gov-notify-confirmation-template-id}
+    GOV_NOTIFY_REJECTION_TEMPLATE_ID: ${ssm:/education-evidence/gov-notify-rejection-template-id}
     FEEDBACK_FORM_URL: ${ssm:/education-evidence/feedback-form-url}
 
 custom:
