--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,7 +30,7 @@ jobs:
       - run:
           name: Run integration tests
           command: |
-            echo -e "/common/hackney-jwt-secret=my_secret\n/common/customer-jwt-secret=my_secret\n/education-evidence/gov-notify-api-key=api-key\n/education-evidence/gov-notify-confirmation-template-id=template-id\n/education-evidence/feedback-form-url=http://feedback-form" >> .env
+            echo -e "/common/hackney-jwt-secret=my_secret\n/common/customer-jwt-secret=my_secret\n/education-evidence/gov-notify-api-key=api-key\n/education-evidence/gov-notify-confirmation-template-id=template-id\n/education-evidence/gov-notify-rejection-template-id=template-id\n/education-evidence/feedback-form-url=http://feedback-form" >> .env
             npm run ci
 
   deploy:
