--- a/.env.sample
+++ b/.env.sample
@@ -2,4 +2,5 @@
 /common/customer-jwt-secret=
 /education-evidence/gov-notify-api-key=
 /education-evidence/gov-notify-confirmation-template-id=
+/education-evidence/gov-notify-rejection-template-id=
 /education-evidence/feedback-form-url=
